# hspn_surrogate_models

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  instructions.md  pyproject.toml  setup.py  submit.slurm
.github/workflows/: docs.yml
cluster/: hpo-pbs.sh  hpo-slurm.sh  hpo.slurm  hspn-2503.def  hspn-locked.def  hspn.def  pytorch-2503-staged.def  pytorch-2503.def  ray_head.py
cluster/hpo-pbs/: cleanup.pbs  controller.pbs  rq_server.pbs  rq_worker.pbs
cluster/hpo-slurm/: hpo.slurm
configs/: don_volume_aoa.yml  example_network.json
docs/: export_mdx.py  package.json  vocs.config.ts
docs/docs/: styles.css
docs/docs/pages/: getting-started.mdx  index.mdx  scaling.mdx  troubleshooting.mdx
docs/docs/pages/api/: hspn.mdx
logfiles/: .gitignore
pyscripts/: data_preprocess_don_volume.py  hello_world.py  train_don.py  train_hspn.py
reference/: NN_modules_tanh (2).py  TwoStep_Train_Batch (2).py  data_preprocess_don_volume.py  hello_world.py  train_hspn.py  utils.py
scripts/: run_train_don.sh
slurm/: don_volume_aoa_batch  hpo_submit.slurm  hspn.def  jyuko_batch
src/hspn/: __init__.py  context.py  dataset.py  don.py  model.py  prepare.py  tracker.py  train.py  train_gnn.py  train_two_step.py  train_utils.py  utils.py
src/hspn/conf/: base.yaml  prepare.yaml  ray_optuna_hpo.yaml  train.yaml  train_gnn.yaml  train_hpo_basic.yaml  train_hpo_optuna.yaml  train_ray.yaml  train_sweep.yaml  train_two_step.yaml
src/hspn/conf/hydra/hydra_logging/: custom.yaml
src/hspn/conf/hydra/job_logging/: custom.yaml
src/hspn/dogn/: constants.py  data.py  epdo.py  utils.py
src/hspn2/: __init__.py  __main__.py  dataloader.py  model.py  train.py  utils.py
src/hspn2/configs/: default.yaml
src/hspn3/: __init__.py  dataset.py  npy_to_hdf5.py  prepare.py  preprocessing.py
src/hspn3/conf/: train.yaml
tests/: e2e.sh  sweep.sh  test_dataset.py  test_train.py  test_two_step.py  two_step.py
