[project]
name = "hspn"
version = "0.1.0"
description = "deep operator networks for ARL CFD"
readme = "README.md"
requires-python = ">=3.10.12"
authors = [
  { name = "Marco Christiani", email = "mchristiani@sei.cmu.edu" },
  { name="Jasmine Ratchford", email="jratchford@sei.cmu.edu" },
]

dependencies = [
    "h5py>3.10.0",
    "hydra-core>=1.3.2",
    "rich>=14.0.0",
    "torch==2.4.0",
    "aim>=3.28.0",
]

[project.optional-dependencies]
dev = [
    "netcdf4>=1.7.2",
    "psutil>=5.9.0",
    "pytest>=8.4.1",
    "pytest-cov>=4.0.0",
    "ruff>=0.9.7",
]
hpo = [
    "hydra-optuna-sweeper==1.2.0",
    "redis>=6.4.0",
    "hydra-ray-launcher>=1.2.0",
    "pydantic<2", # https://github.com/ray-project/ray/issues/37019
]

[project.scripts]
hspn-preprocess = "hspn.prepare:main"
hspn-train = "hspn.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/hspn"]

[tool.ruff]
preview = true
line-length = 120
lint.ignore = ["N813"]
lint.dummy-variable-rgx = "^_$"
target-version = "py310"


# [tool.mypy]
# check_untyped_defs = true
# local_partial_types = true
#
# [[tool.mypy.overrides]]
# module = ["h5py.*"]
# follow_untyped_imports = true
# module = ["h5py.*"]
# ignore_missing_imports = true
